--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,7 +21,8 @@
     "react-router-dom": "^7.1.3",
     "react-toastify": "^11.0.3",
     "recharts": "^2.15.0",
-    "redux-persist": "^6.0.0"
+    "redux-persist": "^6.0.0",
+    "sonner": "^1.7.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
